<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>com.jfzt</groupId>
        <artifactId>meeting_appointment</artifactId>
        <version>0.0.1-SNAPSHOT</version>
    </parent>

    <artifactId>meeting-appointment-modules</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <name>meeting-appointment-modules</name>
    <description>业务模块</description>
    <properties>
        <java.version>21</java.version>
    </properties>
    <dependencies>
        <!--        通用模块-->
        <dependency>
            <groupId>com.jfzt</groupId>
            <artifactId>meeting-appointment-common</artifactId>
            <version>0.0.1-SNAPSHOT</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <version>3.2.5</version>
                <configuration>
                    <skip>true</skip>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>
